--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,39 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.0.*",
+        "symfony/cache": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/http-client": "5.0.*",
+        "symfony/mailer": "5.0.*",
+        "symfony/messenger": "5.0.*",
+        "symfony/mime": "5.0.*",
+        "symfony/notifier": "5.0.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/string": "5.0.*",
+        "symfony/templating": "5.0.*",
+        "symfony/translation": "5.0.*",
+        "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.0.*",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/workflow": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "fzaninotto/faker": "^1.9",
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
